Added transparent water, a skull mesh, and refactored everything in scene.h. New render item class.

--- a/OpenGL_Engine/OpenGL_Engine.vcxproj
+++ b/OpenGL_Engine/OpenGL_Engine.vcxproj
@@ -148,6 +148,7 @@
     </ClCompile>
     <ClCompile Include="Material.cpp" />
     <ClCompile Include="PointLight.cpp" />
+    <ClCompile Include="RenderItem.cpp" />
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="ShaderManager.cpp" />
     <ClCompile Include="Util.cpp" />
@@ -174,6 +175,7 @@
     <ClInclude Include="MainHeaders.h" />
     <ClInclude Include="Material.h" />
     <ClInclude Include="PointLight.h" />
+    <ClInclude Include="RenderItem.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="ShaderManager.h" />
     <ClInclude Include="Util.h" />
