Refactoring done in Scene class

--- a/OpenGL_Engine/imgui.ini
+++ b/OpenGL_Engine/imgui.ini
@@ -19,12 +19,17 @@ Size=389,478
 Collapsed=0
 
 [Window][Light information]
-Pos=796,0
-Size=228,183
+Pos=813,0
+Size=211,185
 Collapsed=0
 
 [Window][OpenGL Engine]
 Pos=0,0
-Size=392,467
+Size=400,467
+Collapsed=0
+
+[Window][Debug]
+Pos=0,0
+Size=387,467
 Collapsed=0
 
