Cleaned up sphere. Changed the car color to something more unique.

--- a/OpenGL_Engine/OpenGL_Engine.vcxproj.filters
+++ b/OpenGL_Engine/OpenGL_Engine.vcxproj.filters
@@ -180,5 +180,8 @@
     <Text Include="skull.txt">
       <Filter>Resource Files\Models</Filter>
     </Text>
+    <Text Include="car.txt">
+      <Filter>Resource Files\Models</Filter>
+    </Text>
   </ItemGroup>
 </Project>
