--- a/OpenGL_Engine/OpenGL_Engine.vcxproj
+++ b/OpenGL_Engine/OpenGL_Engine.vcxproj
@@ -188,6 +188,7 @@
     <ClInclude Include="Vertex.h" />
   </ItemGroup>
   <ItemGroup>
+    <Text Include="car.txt" />
     <Text Include="skull.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
