Primitives issue fixed. Water animates while running at 60 fps just with fewer columns and rows for performance optimization.

--- a/OpenGL_Engine/imgui.ini
+++ b/OpenGL_Engine/imgui.ini
@@ -30,6 +30,11 @@ Collapsed=0
 
 [Window][Debug]
 Pos=0,0
-Size=420,467
+Size=420,516
+Collapsed=0
+
+[Window][Enviorment Settings]
+Pos=0,0
+Size=391,494
 Collapsed=0
 
