Changed the convention of the shaders so its easier to debug them. They should end with (.hlsl).

--- a/OpenGL_Engine/OpenGL_Engine.vcxproj
+++ b/OpenGL_Engine/OpenGL_Engine.vcxproj
@@ -158,8 +158,8 @@
     <ClCompile Include="Vertex.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="shader.frag" />
-    <None Include="shader.vert" />
+    <None Include="FragmentCore.hlsl" />
+    <None Include="VertexCore.hlsl" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.h" />
