--- a/OpenGL_Engine/OpenGL_Engine.vcxproj.filters
+++ b/OpenGL_Engine/OpenGL_Engine.vcxproj.filters
@@ -95,10 +95,10 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="shader.frag">
+    <None Include="FragmentCore.hlsl">
       <Filter>Resource Files\Shaders</Filter>
     </None>
-    <None Include="shader.vert">
+    <None Include="VertexCore.hlsl">
       <Filter>Resource Files\Shaders</Filter>
     </None>
   </ItemGroup>
